# PythonProject7

./: .gitignore  API.env  README.md  pyproject.toml
data/: generate_data.py
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
