[project]
name = "transaction_analyzer"
version = "1.0.0"
description = "Анализатор транзакций из Excel-файлов"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",       # Для работы с Excel/данными
    "openpyxl>=3.0.0",     # Для чтения .xlsx
    "python-dateutil>=2.8.0", # Для работы с датами
    "requests>=2.31.0",    # Для API (если нужно)
    "loguru>=0.7.0",       # Для логирования (альтернатива logging)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",       # Тестирование
    "pytest-cov>=4.0.0",   # Покрытие кода
    "mypy>=1.0.0",         # Статическая типизация
    "flake8>=6.0.0",       # Линтер
    "black>=23.0.0",       # Форматирование
    "isort>=5.12.0",       # Сортировка импортов
]

[tool.black]
line-length = 119
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv/"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]