[tool.poetry]
name = "finance-analyzer"
version = "0.1.0"
description = "Financial transactions analyzer"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"